Update injgen-linux.sh